--- a/client/scss/_main.scss
+++ b/client/scss/_main.scss
@@ -6,24 +6,17 @@ body {
   padding: 0;
 }
 
-canvas {
+#root {
+  // position: absolute;
   top: 0;
-  left: 0;
-  z-index: 0;
-  width: 100%;
-  height: 100%;
-  pointer-events: none;
-}
-
-#main {
-  display: grid;
-  grid-template-columns: 1fr 8fr 6fr;
+  // width: 100%;
 }
 
 #titlebar {
-  // grid-area: 'title';
-  // width: 100%;
-  background-color: yellow;
+  position: absolute;
+  top: 2rem;
+  width: 100%;
+  // background-color: yellow;
   h1 {
     text-align: center;
     margin: inherit;
@@ -32,17 +25,27 @@ canvas {
   }
 }
 
+canvas {
+  top: 0;
+  left: 0;
+  z-index: 0;
+  width: 100%;
+  height: 10rem;
+  pointer-events: none;
+}
+
 #navbar {
   position: absolute;
   left: -16rem;
   top: 15rem;
+  z-index: 100;
   transition: 0.3s;
   padding: 15px;
   width: 18rem;
   font-size: 20px;
   border-radius: 0 5px 5px 0;
   background: rgb(86, 86, 86, 0.95);
-  height: 25rem;
+  height: fit-content; //35rem;
   ul {
     list-style-type: none;
   }
@@ -59,9 +62,17 @@ canvas {
   left: -2rem;
 }
 
+#main {
+  position: absolute;
+  top: 10rem;
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 8fr 6fr;
+}
+
 #Div3 {
-  // grid-area: 'div3';
-  background-color: gold;
+  background-color: rgb(234, 234, 234);
+  border-radius: 2%;
   margin: 1rem;
 }
 
@@ -74,6 +85,5 @@ img {
 }
 
 #credit {
-  // grid-area: 'credit';
   text-align: center;
 }
