--- a/client/scss/_variables.scss
+++ b/client/scss/_variables.scss
@@ -1,3 +1,7 @@
 $lightgrey: #fafafa;
 $spotiGreen: #1db954;
 $button-header-bg: #b2b2b2;
+$text-color: #dfdfdf;
+$text-hover: rgb(42, 41, 41);
+$bg-hover: rgb(243, 243, 243);
+$bg-nav: rgb(42, 41, 41);
