update search by letter and add view my playlists

--- a/client/scss/_main.scss
+++ b/client/scss/_main.scss
@@ -70,13 +70,13 @@ canvas {
 
 #playlistSidebar {
   position: absolute;
-  right: -70rem;
+  right: -58%;
   // right: -5rem;
   top: 10rem;
   z-index: 100;
   transition: 0.3s;
   padding: 15px;
-  width: 70rem;
+  width: 60%;
   // width: fit-content;
   height: 100%; //35rem;
   font-size: 20px;
