--- a/src/client/scss/_variables.scss
+++ b/src/client/scss/_variables.scss
@@ -1,5 +1,5 @@
 $lightgrey: #fafafa;
-$spotiGreen: #1db954;
+$spotiGreen: #62ff36;
 $button-header-bg: #b2b2b2;
 $text-color: #dfdfdf;
 $text-hover: rgb(42, 41, 41);
